# support-assistant

./: .gitignore  README.md  docker-compose-prod.yml  docker-compose.yml
backend/: Dockerfile  main.py  pyproject.toml
backend/components/chat_messages/: service.py
backend/components/llm/: repository.py
backend/restapi/: router.py
backend/restapi/routes/: ai_router.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/source/: App copy 2.tsx  App copy 3.tsx  App copy.tsx
source/: 2.models_prompts_parsers.ipynb  5.indexes.ipynb  simple.example.py
source/llm/: agents.py  base_iteraction.py  indexes.py  memory.py
traefik/: Dockerfile  traefik.yml
