[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["cosmetic master <djangoreactdev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.0"
uvicorn = "^0.23.2"
langchain = "^0.0.325"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
